Flex changes to fix issue on Firefox

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -84,7 +84,7 @@ body {
         height: 100px;
         border-radius: 99px;
         margin: 0 auto;
-        flex: 1 1 auto;
+        flex: 1 0 auto;
     }
 
     @media screen and (min-width: 2050px) {
@@ -189,6 +189,7 @@ body {
 
 .review-section {
     flex: 1 1 100%;
+    margin-bottom: 1rem;
 }
 
 .review-section__title {
@@ -247,6 +248,7 @@ body {
     left: 0;
     font-size: 4rem;
     margin: 2rem 4rem;
+    cursor: pointer;
 
     @media only screen and (max-width: 500px) {
         font-size: 2.5rem;
